added some javadoc and call list is more dynamic